css/main.scss
---
---

@import 'colors';
@import 'fonts';
@import 'layout';

html, body {
    font-size: 62.5%;
}

body {
    font-family: 'AdobeGaramond', serif;
    font-size: 1.9rem;
    color: $font-color;
}

p, li {
    line-height: 1.6;
}

// Punch card post has really long inline code block
article p {
    overflow-wrap: break-word;
}

.code-title {
    font-family: monospace, monospace; // Avoid shrinking in Chrome
}

pre {
    font-size: 1.5rem;
    line-height: 1.2;
    background-color: $pre-background-color;
    border: 1px solid $pre-border-color;
    border-radius: 5px;
    padding: 12px;
    overflow: scroll;
    margin: 1.8em 0;
}

:not(pre) > code {
    font-family: monospace, monospace; // Avoid shrinking in Chrome
    font-size: 1.5rem;
    background-color: $pre-background-color;
    border: 1px solid $pre-border-color;
    border-radius: 5px;
    padding: 0.1em 0.3em;
    white-space: pre-line;
}

h1 {
    font-size: 3.8rem;
    line-height: 1.2;
}

a {
    color: $link-color;

    &:hover {
        text-decoration: underline;
    }

    &:visited {
        color: $visited-link-color;
    }
}

.tagline {
    font-size: 1.4rem;
    font-style: italic;
}

// Make sure that superscript (e.g. for footnotes) doesn't mess with line
// height. We just lower the superscript a tad.
sup {
    vertical-align: baseline;
    position: relative;
    top: -0.4em;
}

header {
    font-family: Helvetica, sans-serif;
    border-right: 1px solid black;
}

header ul, .mobile-header ul, ul.index {
    list-style: none;
}

ul.index li {
    border-bottom: 1px dashed $index-border-color;

    &:last-child {
        border-bottom: none;
    }
}

h1 a {
    text-decoration: none;
    color: inherit;

    &:hover {
        text-decoration: underline;
    }

    &:visited {
        color: inherit;
    }
}

.footnotes {
    font-size: 1.6rem;
    margin-top: 26px;
    padding: 10px 0;
    border-top: 1px dashed $index-border-color;

    a {
        // Seems to be the only way to wrap URLs in Chrome on mobile?
        word-break: break-all;
    }
}

.mobile-header {
    border-bottom: 1px dashed $index-border-color;
}

.arrow-down, .arrow-up {
    width: 0;
    height: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
}

.arrow-down {
    border-top: 10px solid darkgray;
}

.arrow-up {
    border-bottom: 10px solid black;
}

.closed {
    display: none;
}

img.icon {
    width: 30px;
    height: 30px;
}

